--- a/video-demo.xcodeproj/xcshareddata/xcschemes/video-demo.xcscheme
+++ b/video-demo.xcodeproj/xcshareddata/xcschemes/video-demo.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1100"
+   LastUpgradeVersion = "1030"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7D49EBD6F2C35B4DE248046DA1EC7D2E"
-               BuildableName = "Pods_video_demo.framework"
-               BlueprintName = "Pods-video-demo"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "733C31B42060C9AC00CC32F1"
+               BuildableName = "video-demo.app"
+               BlueprintName = "video-demo"
+               ReferencedContainer = "container:video-demo.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "733C31B42060C9AC00CC32F1"
+            BuildableName = "video-demo.app"
+            BlueprintName = "video-demo"
+            ReferencedContainer = "container:video-demo.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -42,15 +51,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7D49EBD6F2C35B4DE248046DA1EC7D2E"
-            BuildableName = "Pods_video_demo.framework"
-            BlueprintName = "Pods-video-demo"
-            ReferencedContainer = "container:Pods.xcodeproj">
+            BlueprintIdentifier = "733C31B42060C9AC00CC32F1"
+            BuildableName = "video-demo.app"
+            BlueprintName = "video-demo"
+            ReferencedContainer = "container:video-demo.xcodeproj">
          </BuildableReference>
-      </MacroExpansion>
+      </BuildableProductRunnable>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -60,6 +70,16 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "733C31B42060C9AC00CC32F1"
+            BuildableName = "video-demo.app"
+            BlueprintName = "video-demo"
+            ReferencedContainer = "container:video-demo.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
